@@ -29,6 +29,7 @@
       <duration>0</duration>
       <start>2013-01-10T10:49:00+00:00</start>
       <period>0000-00-27T08:00:00</period>
+      <icon>moon.png</icon>
    </entry>
    
    <entry>
@@ -43,6 +44,7 @@
       <duration>0</duration>
       <start>2013-01-22T10:13:00+00:00</start>
       <period>0000-00-27T15:00:00</period>
+      <icon>moon.png</icon>
    </entry>
 
    <entry>
@@ -57,6 +59,7 @@
       <duration>0</duration>
       <start>2013-01-07T06:00:00+02:00</start>
       <period>0000-00-13T17:32:48+00:00</period>
+      <icon>moon.png</icon>
    </entry>
 
    <entry>
@@ -71,6 +74,7 @@
       <duration>0</duration>
       <start>2013-01-27T04:40:00+00:00</start>
       <period>0000-00-29T12:44:03</period>
+      <icon>moon.png</icon>
    </entry>
 
    <entry>
@@ -85,6 +89,7 @@
       <duration>0</duration>
       <start>2013-01-11T19:45:02+00:00</start>
       <period>0000-00-29T12:44:03</period>
+      <icon>moon.png</icon>
    </entry>
 
    <entry>
@@ -101,6 +106,8 @@
       <duration>12</duration>
       <start>2013-03-05T12:00:00+00:00</start>
       <period>0000-00-27T07:43:12</period>
+      <icon>moon.png</icon>
+      <color>green</color>
    </entry>
 
    <entry>
@@ -119,5 +126,7 @@
       <duration>12</duration>
       <start>2013-03-18T12:00:00+00:00</start>
       <period>0000-00-27T07:43:12</period>
+      <icon>moon.png</icon>
+      <color>red</color>
    </entry>
 </feed>
